# fdk-harvester-bff

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  fdk-harvester-bff.yaml  mypy.ini  noxfile.py  pyproject.toml  pytest.ini
.github/workflows/: deploy-demo.yaml  deploy-prod&demo.yaml  deploy-prod.yaml  deploy-staging.yaml
.pytype/: .ninja_log  build.ninja
.pytype/imports/: fdk_harvester_bff.__init__.imports
.pytype/pyi/: noxfile.pyi  services.pyi
.pytype/pyi/fdk_harvester_bff/: __init__.pyi  gunicorn_config.pyi
mock/mappings/: codes_frequency-d320e88a-1d79-417f-99f5-d686659568db.json  codes_linguisticsystem-2a9936ce-5e7c-401c-a745-441c878b9f4e.json  codes_location-8a3511bd-581e-4dcc-b0aa-750dde54cfe5.json  codes_openlicenses-7d63ba1e-8a94-4391-8b57-97eb9b5e586a.json  codes_provenancestatement-10da4be4-c265-4af4-985d-015b6f312d27.json  codes_referencetypes-a26092b8-66d6-4189-8a0e-da4fe41c9d2d.json  codes_rightsstatement-aa17049e-2fac-4ec8-8ee1-a11b7b585300.json  concepts_a683bc63-2961-46af-9956-8a4a3f991cc6-f0389c4b-cec9-4ab0-a494-c612f193bb7c.json  dataservices_a7562855-d02c-3681-8c52-c41dae1c8edc-f4113846-9384-44be-838b-c10a2bb80bee.json  datasets_dd05acaa-1c89-4139-8612-0ad10e75d6a6-56ea74c8-b30e-4346-818d-db3ae26c3ae7.json  eu_access-rights-bc6144b9-4652-40c0-a9b7-66e9a4e8990f.json  eu_data-themes-6e58b24d-c722-4b53-9da6-d2f4d9d2e720.json  eu_file-types-a0ef271d-8c0e-460e-8779-387faff4ac47.json  eu_frequencies-a61c75e4-7a32-46d8-975a-e399365e7643.json  events_bc56fa1c-434a-3561-8fa7-e373dc1b6b55-9208462c-b9a8-4a0d-a5d1-314e88a1f3d5.json  geonorge_administrative-enheter_fylker-21352342-7ac0-4653-a132-78517676623e.json  geonorge_administrative-enheter_kommuner-286b47e8-f683-4a17-8881-fdda0e9de1c0.json  geonorge_administrative-enheter_nasjoner-bff91b26-797a-4efc-993f-2d24da0d0682.json  iana_media-types-c6cbec85-4309-46bd-bc3e-c7329ddf2d1e.json  informationmodels_6feff2b7-c7e5-3bde-99bf-9e5ae5cd6be8-8a9c2c8c-7aba-42d6-839a-b9b13b4a4fa3.json  linguistic-systems-1b60f777-639b-4b1e-8dcb-365c03af6dd4.json  los-8d475785-467d-49d1-8a8b-7a3061b1b113.json  los_themes-and-words-81c02f7a-e62c-4347-a290-1414d8363742.json  open-licenses-9719cd7c-910f-411a-aa40-085bd60c22c1.json  organizations-55d05029-2d8c-4622-8829-731ea6bc8341.json  organizations_971526920-8132b89f-63da-4e63-9895-58ddb672a96e.json  provenance-statements-0f93b92d-008b-4f74-94b6-338cb2e489a7.json  public-services_536bfa22-0126-3032-b31a-af8d05b7b0ae-51d94fed-3bd9-4ea4-9cf2-34d5cc0a0ed5.json  reference-types-f2cf08c5-b996-435d-aa9b-529850486f0c.json  themes-5be023ce-29f0-4c45-9585-8b32a9b40cbf.json
src/fdk_harvester_bff/: __init__.py  gunicorn_config.py  routes.py
src/fdk_harvester_bff/enum/: harvester_type.py
src/fdk_harvester_bff/service/: services.py
tests/: conftest.py
tests/contract/: test_api.py  test_concept.py  test_dataservice.py  test_dataset.py  test_event.py  test_infomodel.py  test_publicservices.py
