[tool.poetry]
name = "fdk_harvester_bff"
version = "0.1.0"
description = "A service for publishing dataservices in a datacatalog"
authors = ["Stig B. Dørmænen <stigbd@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Informasjonsforvaltning/fdk-harvester-bff"
repository = "https://github.com/Informasjonsforvaltning/fdk-harvester-bff"
classifiers=[
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
pyyaml = "^5.4.1"
jsonpickle = "^3.0.0"
requests = "^2.28.1"
Flask-Cors = "^3.0.10"
simplejson = "^3.17.6"
python-json-logger = "^2.0.4"
Flask-RESTful = "^0.3.9"
fdk-rdf-parser = "2.2.7"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-dotenv = "^0.5.2"
pytest-docker = "^1.0.1"
pytest-cov = "^4.0.0"
docker-compose = "^1.29.2"
coverage = {extras = ["toml"], version = "^6.5.0"}
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.10.27"
flake8-import-order = "^0.18.1"
safety = "^2.3.5"
mypy = "^0.991"
pytype = {version = "^2022.11.29", python = "3.9"}
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
Pygments = "^2.13.0"
xdoctest = {extras = ["all"], version = "^1.1.0"}
sphinx = "^5.3.0"
sphinx-autodoc-typehints = "^1.19.5"
codecov = "^2.1.12"
flake8-assertive = "^2.1.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["fdk_harvester_bff"]
omit = ["src/fdk_harvester_bff/gunicorn_config.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
